src/test/ui/union/union-unsized.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/union-unsized.rs:4:8
   |
LL |     a: str,
   |        ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: no field of a union may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: borrowed types always have a statically known size
   |
LL |     a: &str,
   |        ^
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     a: Box<str>,
   |        ^^^^   ^

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/union-unsized.rs:12:8
   |
LL |     b: str,
   |        ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: no field of a union may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: borrowed types always have a statically known size
   |
LL |     b: &str,
   |        ^
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     b: Box<str>,
   |        ^^^^   ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
